--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-input,img{
+input,
+img {
     margin: 0;
     padding: 0;
 
@@ -9,26 +10,22 @@ input,img{
     top: 150px;
 }
 
-#shift>#drawpen {
-    width:100px;
+#shift>svg {
+    margin: 10px 14px;
+    padding: 8px;
+    width: 35px;
     height: 35px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-image: url(./drawpen.png);
-    background-color: transparent;
-    border: none ;
-
+    border-radius: 50%;
 }
 
-#shift>#eraser {
-    background-repeat: no-repeat;
-    width: 50px;
-    height: 30px;
-    background-size: contain;
-    background-image: url(./era.png);
-    background-color: transparent;
-    border: none ;
+#shift>svg.ative {
+   
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.589);
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
 }
+
+
 .clearfix::after {
     content: '';
     display: block;
@@ -67,7 +64,7 @@ input,img{
     position: relative;
 }
 
-.labelForP{
+.labelForP {
     position: absolute;
     font-size: small;
     color: aliceblue;
@@ -75,7 +72,7 @@ input,img{
     left: 5px;
 }
 
-footer{
+footer {
     color: aliceblue;
     position: fixed;
     bottom: 0;
