--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ img {
     top: 150px;
 }
 
-#shift>svg {
+#shift> div >svg {
     margin: 10px 14px;
     padding: 8px;
     width: 35px;
@@ -18,13 +18,21 @@ img {
     border-radius: 50%;
 }
 
-#shift>svg.ative {
-   
+
+
+#shift > div > svg.ative {
+
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.589);
     transform: scale(1.2);
     transition: all 0.2s ease-in-out;
 }
 
+#shift > div >  svg:hover{
+    
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.589);
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
+}
 
 .clearfix::after {
     content: '';
