--- a/style.css
+++ b/style.css
@@ -13,3 +13,7 @@ body {
 #colorpicker {position: absolute;top: 0;padding: 10px;list-style-type: none;}
 #colorpicker li {margin: 3px;float: left;width: 50px;height: 50px;border-radius: 50%;box-shadow: 0 0px 25px 0 rgba(126, 126, 126, 0.815), inset 0 0px 15px 0 rgba(87, 87, 87, 0.363);position: relative;}
 #labelForP {line-height: 16px;vertical-align: middle;text-align: center;color: aliceblue;}
+
+
+#site-loading{  z-index: 2; position: fixed; top: 0; left: 0; right: 0; bottom:0; width: 100%; height: 100%; background: white ; }
+#site-loading > .loading { width: 75px; height: 75px; border: 1px solid transparent; box-shadow: 0px 0px 15px 5px grey; border-radius: 50%; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; margin: auto; }
